# Aether-Guard

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  verify_blueprint_v1.py  verify_phase2.py  verify_phase3.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: quality-gate.yml  slsa-source-provenance.yml  supply-chain.yml
docs/: AI-Artifact-Versioning-v2.3-M2.md  AI-Backtesting-v2.3-M2.md  AI-Fusion-Model-v2.3-M2.md  AI-TSMixer-Baseline-v2.3-M2.md  ARCHITECTURE-v2.3.md  Agent-ONNX-Inference-v2.3-M3.md  CI-SupplyChain-Stabilization-v2.3.md  CP3407-Assessor-OneClick.md  CP3407-Budget-Tracking-v2.3.md  CP3407-Design-Artifacts.md  CP3407-HD-Evidence.md  CP3407-Iteration-Log.md  CP3407-Requirements-v2.3.md  CP3407-Stakeholder-Feedback-v2.3.md  CP3407-TDD-Evidence-v2.3.md  CP3407-TDD-Ledger-v2.3.json  CP3407-TDD-Verification-v2.3.md  CP3407-Testing-v2.3.md  CP3407-Toolchain-Rationale-v2.3.md  Core-Dynamic-Risk-v2.3-M4.md  Core-Semantic-Rollout-v2.3-M3.md  Data-Provenance-v2.3-M2.md  FAQ.md  Observability.md  PR-Template-v2.3-Acceptance.md  PROTO-Heartbeat-Semantic-v2.3-M3.md  QA-Canary-Rollback-v2.3-M3.md  QA-SmokeTest-v2.3-M1.md  QA-SmokeTest-v2.3.md  Quickstart.md  ROADMAP-v2.3.md  Release-Notes-v2.3.md  Runbook-SPIRE-JoinToken.md  SPIRE-mTLS.md  Troubleshooting.md  Upgrade-Rollback.md  Web-Explainability-v2.3-M4.md
docs/design/: AetherGuard-v2.3-Architecture.puml  AetherGuard-v2.3-ERD.puml  AetherGuard-v2.3-UI-Prototype.puml  AetherGuard-v2.3.dbml  UI-Prototype-Spec-v2.3.md
docs/diagrams/: Class-Diagram-v2.3.md
infrastructure/otel/: collector.yaml
infrastructure/spire/: Dockerfile.agent  Dockerfile.bootstrap  agent-entrypoint.sh  agent.conf  bootstrap.sh  server.conf  spiffe-helper-agent.conf  spiffe-helper-core.conf
scripts/: fire_drill.py  self_check.py
scripts/data_acquisition/: README.md  fetch_cluster_traces.py  fetch_incident_archives.py  fetch_spot_history.py
scripts/model_training/: README.md  artifact_registry.py  backtest_fusion_vs_v22.py  requirements.txt  train_fusion_baseline.py  train_tsmixer_baseline.py  verify_reproducible_run.py
scripts/qa/: README.md  evaluate_m3_canary.py  verify_tdd_evidence.py
src/db/: init_timescaledb.sql  phase2_commands.sql  update_agent_commands.sql  update_ai_columns.sql
src/services/agent-cpp/: ArchiveManager.cpp  ArchiveManager.hpp  CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.hpp  CommandPoller.cpp  CommandPoller.hpp  CriuManager.cpp  CriuManager.hpp  Dockerfile  InferenceEngine.cpp  InferenceEngine.hpp  LifecycleManager.cpp  LifecycleManager.hpp  NetworkClient.cpp  NetworkClient.hpp  SemanticFeatures.hpp  SysMonitor.cpp  SysMonitor.hpp  Tracing.cpp  Tracing.hpp  main.cpp
src/services/agent-cpp/cmake/: patch-grpc-deps.cmake  patch-nlohmann-json.cmake
src/services/agent-cpp/tests/: CriuCommandTests.cpp  InferenceEngineTests.cpp
src/services/ai-engine/: Dockerfile  init_model.py  main.py  model.pth  model.py  requirements.txt
src/services/ai-engine/tests/: test_model.py
src/services/core-dotnet/: AetherGuard.sln
src/services/core-dotnet/AetherGuard.Core/: AetherGuard.Core.csproj  AetherGuard.Core.http  Dockerfile  Program.cs  appsettings.json
src/services/core-dotnet/AetherGuard.Core.Tests/: AetherGuard.Core.Tests.csproj  AgentWorkflowServiceTests.cs  DynamicRiskPolicyTests.cs  ExternalSignalEnrichmentClientTests.cs  ExternalSignalParserTests.cs
src/services/core-dotnet/AetherGuard.Core/Controllers/: AgentController.cs  ArtifactController.cs  AuditController.cs  CommandController.cs  CommandsController.cs  DashboardController.cs  DiagnosticsController.cs  ExternalSignalsController.cs  IngestionController.cs  MarketSignalController.cs
src/services/core-dotnet/AetherGuard.Core/Data/: ApplicationDbContext.cs  DesignTimeDbContextFactory.cs
src/services/core-dotnet/AetherGuard.Core/Data/Migrations/: 20260130113459_InitialCreate.Designer.cs  20260130113459_InitialCreate.cs  20260201123714_AddExternalSignals.Designer.cs  20260201123714_AddExternalSignals.cs  20260202103549_AddExternalSignalFeeds.Designer.cs  20260202103549_AddExternalSignalFeeds.cs  20260211152000_AddExternalSignalEnrichment.Designer.cs  (+2 more)
src/services/core-dotnet/AetherGuard.Core/Grpc/: AgentGrpcService.cs  ControlPlaneGrpcService.cs  GrpcErrorHelper.cs
src/services/core-dotnet/AetherGuard.Core/Observability/: OpenTelemetryOptions.cs
src/services/core-dotnet/AetherGuard.Core/Properties/: launchSettings.json
src/services/core-dotnet/AetherGuard.Core/Security/: MtlsCertificateLoader.cs  MtlsOptions.cs  SpiffeIdParser.cs
src/services/core-dotnet/AetherGuard.Core/Services/: AgentInferenceOptions.cs  AgentWorkflowService.cs  AnalysisService.cs  ApiResult.cs  CommandService.cs  ControlPlaneService.cs  DiagnosticsBundleService.cs  DynamicRiskOptions.cs  DynamicRiskPolicy.cs  GrpcParameterConverter.cs  MigrationCycleService.cs  MigrationOrchestrator.cs  SnapshotRetentionOptions.cs  SnapshotRetentionService.cs  SnapshotStorageService.cs  TelemetryIngestionService.cs  TelemetryStore.cs
src/services/core-dotnet/AetherGuard.Core/models/: Agent.cs  AgentCommand.cs  AnalysisResult.cs  CommandAudit.cs  ExternalSignal.cs  ExternalSignalFeedState.cs  SchemaRegistryEntry.cs  TelemetryPayload.cs  TelemetryRecord.cs
src/shared/protos/: agent_service.proto  common.proto  control_plane.proto
src/shared/protos/google/api/: annotations.proto  http.proto
src/web/dashboard/: Dockerfile  auth.ts  instrumentation.ts  package-lock.json  package.json  proxy.ts
src/web/dashboard/app/: DashboardClient.tsx  actions.ts  layout.tsx  page.tsx
src/web/dashboard/app/login/: page.tsx
src/web/dashboard/components/: AuditLogStream.tsx  ControlPanel.tsx  ExplainabilityPanel.tsx  ExternalSignalsPanel.tsx  FirstRunGuide.tsx  HistoryChart.tsx
src/web/dashboard/lib/: api.ts
src/web/dashboard/tests/: api.utils.test.ts
src/web/dashboard/types/: index.ts  next-auth.d.ts
(+23 files in other folders)
